# neural_prophet

./: README.md  Untitled-1.ipynb  mkdocs.yml  pyproject.toml  regularization-results.txt  test.py  untitled-01.py
docs/: check_nblink_files.py
docs/doctrees/: Live_plot_during_training.doctree  auto-regression.doctree  autoregression_yosemite_temps.doctree  benchmarking.doctree  changes-from-prophet.doctree  collect_predictions.doctree  configure.doctree  contents.doctree  contribute.doctree  df_utils.doctree  energy_hospital_load.doctree  energy_solar_pv.doctree  environment.pickle  events.doctree  events_holidays_peyton_manning.doctree  forecaster.doctree  full_simple_model.doctree  future-regressors.doctree  global_modeling.doctree  hdays.doctree  hyperparameter-selection.doctree  lagged-regressors.doctree  lagged_covariates_energy_ercot.doctree  metrics.doctree  model-overview.doctree  plot_forecast.doctree  plot_model_parameters.doctree  season_multiplicative_air_travel.doctree  seasonality.doctree  sparse_autoregression_yosemite_temps.doctree  sub_daily_data_yosemite_temps.doctree  test_and_crossvalidate.doctree  time_dataset.doctree  time_net.doctree  trend.doctree  trend_peyton_manning.doctree  utils.doctree
docs/html/: Live_plot_during_training.html  (+40 more)
neuralprophet/: configure.py  df_utils.py  forecaster.py  plot_forecast.py  plot_forecast_plotly.py  plot_model_parameters.py  plot_model_parameters_plotly.py  time_dataset.py  time_net.py  utils.py
tests/: test_integration.py  test_plotting.py  test_regularization.py  test_uncertainty.py  test_unit.py
(+12 files in other folders)
