[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | example_data
    | example_notebooks
    | notes
    | site
  )/
  | .gitignore
)
'''

[tool.poetry]
name = "neuralprophet"
version = "0.3.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.15.4"
pandas = ">=1.0.4"
matplotlib = ">=2.0.0"
torch = ">=1.8.0"
LunarCalendar = ">=0.0.9"
convertdate = ">=2.1.2"
holidays = "^0.14.2"
python-dateutil = ">=2.8.0"
tqdm = ">=4.50.2"
torch-lr-finder = ">=0.2.1"
ipywidgets = ">=7.5.1"
dataclasses = ">=0.6"
kaleido = "0.2.1"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
